[tool.poetry]
name = "schwifty"
version = "2022.09.0"
description = "Validate/generate IBANs and BICs"
authors = ["Martin Domke <mail@martindomke.net>"]
readme = "README.rst"
homepage = "https://github.com/mdomke/schwifty"
documentation = "https://schwifty.readthedocs.io/en/latest/"
repository = "https://github.com/mdomke/schwifty"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
include = ["schwifty/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
iso3166 = "^2.0"
pycountry = "^20.7"
importlib_resources = { version = "^1.5", python = "<3.9" }
importlib_metadata = { version = "^1.7", python = "~3.7" }

[options.package_data]
schwifty = ["*_registry/*.json", "py.typed"]

[tool.black]
line-length = 100

[tool.setuptools_scm]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"
